--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap" rel="stylesheet">
     <title>Nimish Wadekar - Portfolio</title>
     <style>
       * {
         font-family: 'Roboto', sans-serif;
+        margin: 0;
       }
     </style>
   </head>
